[fix bug 1268847] Remove outdated styleguide pages

--- a/bedrock/styleguide/templates/styleguide/websites/community-overview.html
+++ b/bedrock/styleguide/templates/styleguide/websites/community-overview.html
@@ -16,7 +16,7 @@
 <h2>Overview</h2>
 <div>
   <p>Sandstone is a set of tools to help you make any community site consistent with our current brand guidelines and let visitors know that it is officially part of Mozilla.</p>
-  <p>At minimum, please include <a href="{{ url('styleguide.websites.sandstone-tabzilla') }}">Tabzilla</a> and use <a href="{{ url('styleguide.websites.sandstone-typefaces') }}">Open Sans Light</a> for headers in your designs. You may also use responsive design, a large top promo area and a menu system like the one on mozilla.org and our other sites. The below examples show Sandstone implemented on various community pages. Please note the elements they have in common as well as those that have been customized or embellished.</p>
+  <p>At minimum, please include <a href="https://github.com/mozilla/tabzilla/">Tabzilla</a> and use <a href="{{ url('styleguide.websites.sandstone-typefaces') }}">Open Sans Light</a> for headers in your designs. You may also use responsive design, a large top promo area and a menu system like the one on mozilla.org and our other sites. The below examples show Sandstone implemented on various community pages. Please note the elements they have in common as well as those that have been customized or embellished.</p>
 </div>
 <img src="{{ static('img/styleguide/websites/community-overview.png') }}" alt="Community sites overview" id="overview" />
 </section>
