--- a/bedrock/mozorg/templates/mozorg/about-base.html
+++ b/bedrock/mozorg/templates/mozorg/about-base.html
@@ -12,7 +12,7 @@
     (url('mozorg.about.leadership'),  _('Leadership')),
     (url('mozorg.about.governance.governance'), _('Governance')),
     (url('mozorg.about.forums.forums'), _('Forums')),
-    (url('mozorg.about.patents'), _('Patents')),
+    (url('mozorg.about.policy.patents.index'), _('Patents')),
 ] -%}
 
 {% block extrahead %}
