--- a/bedrock/mozorg/templates/mozorg/about/policy/patents/license.html
+++ b/bedrock/mozorg/templates/mozorg/about/policy/patents/license.html
@@ -70,7 +70,7 @@
   <div class="reference">
     <h4>{{ _('Historical Documents') }}</h4>
     <ul>
-      <li><a href="{{ url('mozorg.about.patents.license-1.0') }}">{{ _('Mozilla Open Software Patent License Agreement v1.0') }}</a></li>
+      <li><a href="{{ url('mozorg.about.policy.patents.license-1.0') }}">{{ _('Mozilla Open Software Patent License Agreement v1.0') }}</a></li>
     </ul>
   </div>
 {% endblock %}
