fixing misplaced apostrophe
Thanks @jruderman

--- a/bedrock/security/templates/security/web-bug-bounty.html
+++ b/bedrock/security/templates/security/web-bug-bounty.html
@@ -103,7 +103,7 @@
       <ul>
         <li>Security bug is on the list of sites which part of the bounty. See the eligible bugs section of the <a href="{{ url('security.bug-bounty.faq-webapp') }}">Web Application Security Bounty FAQ</a> for the list of sites which are included under the bounty.</li>
         <li>More information about this program can be found in the <a href="{{ url('security.bug-bounty.faq-webapp') }}">Web Application Security Bounty FAQ</a>.</li>
-        <li>The risk determination and bounty reward are based on the sole determination of the bounty committee after analysis of the bug, it's impact, the difficulty of successful exploitation, and the resource impacted.</li>
+        <li>The risk determination and bounty reward are based on the sole determination of the bounty committee after analysis of the bug, its impact, the difficulty of successful exploitation, and the resource impacted.</li>
       </ul>
     </div>
   </article>
