Update FAQ to reflect changes to bounty program

--- a/bedrock/security/templates/security/bug-bounty/faq-webapp.html
+++ b/bedrock/security/templates/security/bug-bounty/faq-webapp.html
@@ -217,7 +217,8 @@
             added back at a later date when a test server is deployed to avoid negative impacts
             on our primary reference site.</p>
 
-          <p>Only Mozilla websites and services are in scope, not denial of service attacks, email phishing attacks
+          <p>Only Mozilla websites and services are in scope. Issue categories explicitly excluded 
+            from eligibility include not denial of service attacks, email phishing attacks
             against employees, our offices, etc. Additionally, flaws relying on out-of-date
             browsers, plugins, or add-ons, which require extremely unlikely/unusual user
             interaction, and banner and version information are generally not eligible.</p>
