--- a/bedrock/firefox/templates/firefox/new/redesign/base.html
+++ b/bedrock/firefox/templates/firefox/new/redesign/base.html
@@ -25,6 +25,12 @@
   {{ static('img/firefox/firefox-independent-1200.jpg') }}
 {% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('firefox-new-optimizely') %}
+    {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block body_id %}{% endblock %}
 {% block body_class %}{% endblock %}
 
